--- a/Pset 2/index.html
+++ b/Pset 2/index.html
@@ -143,25 +143,20 @@
 
 function drawCheckers(){ 
     //loop through all possible squares
-    var e = document.getElementById('pieces');
+    var piecesgrid = document.getElementById('pieces');
     console.log("in drawCheckers");
     for (var i = 0; i < BOARD_SIZE; i++) {
         var row = document.createElement("div"); 
         row.className = "row"; 
+        row.setAttribute("style","position:absolute;")
         for (var j = 0; j < BOARD_SIZE; j++) {
             var cell = document.createElement("div"); 
-            console.log(x_inc);
-            console.log(y_inc);
-            console.log(x_inc*i);
-            console.log(y_inc*j);
-            cell.setAttribute("style", "position:relative;")
+            cell.setAttribute("style", "position:absolute;")
             console.log(cell);
             addCheckerImg(cell,i,j);
-            console.log("cell is: ");
-            console.log(cell);
             row.appendChild(cell); 
        }
-       e.appendChild(row); 
+       piecesgrid.appendChild(row); 
    }
 }; 
 
@@ -210,10 +205,11 @@ function addCheckerImg(cell, row, column){
 
         <td id="content">
             <div id="boardwrapper" style="width:400px; height:400px;">
-          <canvas id="canvas" width="400" height="400">
+          <canvas id="canvas" width="400" height="400" style="position:absolute;">
           </canvas>
-          <div id="pieces" style="positon:absolute;z-index:-1;">
+          <div id="pieces" style="positon:relative;">
             </div>
+          </div>
         </td>
     </tr>
 
