Assignment 2 Part 2: Fixed New Game Functionality

--- a/Pset 2/index.html
+++ b/Pset 2/index.html
@@ -118,6 +118,7 @@
         
         $("#btnNewGame").click(function(evt) {
             board.prepareNewGame();
+            drawCheckerGrid();
         });
 
         $("#btnAutoMove").click(function(evt) {
