Pset 3: Fixed Drag and Drop with Image Functionality

--- a/Pset 3/index.html
+++ b/Pset 3/index.html
@@ -189,7 +189,6 @@ function drawCheckerGrid(){
         for (var j = 0; j < BOARD_SIZE; j++) {
             var cell = document.createElement("div"); 
             cell.id=j.toString();
-            cell.className = "checker";
             cell.setAttribute("style", "position:absolute;")
             addCheckerImg(cell,i,j);
             row.appendChild(cell); 
@@ -349,10 +348,11 @@ function addCheckerImg(cell, row, column){
         }
         var img = document.createElement('img');
         img.src = imgpath;
+        img.className = "checker";
         img.setAttribute("style", "width:"+x_inc+"px; height:"+y_inc+"px;position:absolute;left:"+x_inc*column+"px;top:"+y_inc*row+"px;")
         cell.appendChild(img);
 
-        //cell.setAttribute("style", "background:url("+imgpath+") no-repeat center center;width:"+x_inc+"px; height:"+y_inc+"px;position:absolute;left:"+x_inc*column+"px;top:"+y_inc*row+"px;");
+        //cell.justsetAttribute("style", "background:url("+imgpath+") no-repeat center center;width:"+x_inc+"px; height:"+y_inc+"px;position:absolute;left:"+x_inc*column+"px;top:"+y_inc*row+"px;");
         //cell.appendChild(img);
     }
 };
